--- a/23-Media-Servers.Rmd
+++ b/23-Media-Servers.Rmd
@@ -7,7 +7,7 @@
 
 ## Media Bank
 
-There is a new bank on the Small Screen Called Media. This bank was created to be able to handle media servers in a smart and easy way. In order to see content in this bank, users will need to create Media Server devices such as Green Hippo's Hippotizer. All virtual controls are also mapped to the physical wheels for easy use.
+There is a bank on the Small Screen Called Media. This bank was created to be able to handle media servers in a smart and easy way. In order to see content in this bank, users will need to create Media Server devices such as Green Hippo's Hippotizer. All virtual controls are also mapped to the physical wheels for easy use.
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FlVvUqSqPrRFKgcECEGjN%2Fimage.png?alt=media&token=374479f8-7747-4c66-84fd-a559a7981644)
 
@@ -34,7 +34,11 @@ This sub-bank includes a graphic interface to control the keystoning of the serv
 
 **Media – Generator Bank**
 
-This sub- bank now is specifically made for Hippotizer. On this bank, users can control the picture that is sent from the server's layer on the Generator engine. The bank acts the same as the Media FX bank by selecting the Generator from the Generators list and then moving the Generator's parameters accordingly.
+This sub- bank is specifically made for Hippotizer. On this bank, users can control the picture that is sent from the server's layer on the Generator engine. The bank acts the same as the Media FX bank by selecting the Generator from the Generators list and then moving the Generator's parameters accordingly.
+
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FTP8i9jK7Qn2LqYocUTXt%2Fimage.png?alt=media&token=9b3bc2d2-daa5-4f5d-a121-234e9e6c8798)
+
 
 **Media – Geometry Bank**
 
@@ -51,3 +55,6 @@ This sub-bank includes an interface to control most of the geometric functions o
 - Positioning, both X and Y
 
 In addition there is a graphic preview to show the approximate result of the geometric parameters.
+
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FA7nVUjNgsguL4OhIFk9N%2Fimage.png?alt=media&token=15b6d68d-dff6-4d1f-b4d6-2515a479acdb)
